1.21.1 migration: phase 9 - loot system re-enablement + condition API fixes
- ConditionDeserializer: use ICondition.CODEC instead of removed CraftingHelper.getCondition
- ConditionalLoadable: use ICondition.conditionsMatched(JsonOps, json) + ICondition.writeConditions(DynamicOps, JsonObject, List) to replace removed CraftingHelper APIs
- ContainsItemModifierLootCondition: fix serialize/deserialize using Ingredient.CODEC_NONEMPTY
- HasLootContextSetCondition.Serializer: implement serialize/deserialize/codec() using LootContextParamSets.CODEC
- MantleLoot: re-enable HasLootContextSetCondition registration (codec works now)
- LootTableInjection: re-enable LOADABLE (using LootPoolEntries.CODEC via CodecLoadable) + LootPoolInjection.LOADABLE
- LootTableInjection.LootPoolInjection.inject(): use AT-exposed LootPool.entries list
- LootTableInjector.init(): fully re-enabled with new condition APIs
- LootTableInjector.onResourceManagerReload(): re-enabled using ICondition.conditionsMatched
- accesstransformer.cfg: expose LootPool.entries and LootTable.pools
- AbstractFluidContainerTransferProvider: use ICondition.writeConditions instead of CraftingHelper.serialize
- SimpleFinishedRecipe: remove throw from deprecated constructor (data holder, not runtime crash)